--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": "^8.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue2-touch-events": "^3.2.2",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
